﻿Version 1.1.8 -

- Exclude BOB and Procedural Objects templates from being reported as unused assets


Version 1.1.7.1 hotfix -

- Fix "Africa in Minature" style being confused with "Industrial Evolution"


Version 1.1.7 -

- Support game version 1.17 and associated DLC
- Update bundled CitiesHarmony


Version 1.1.6 -

- Add detailed debugging logging option
- Reset skipping file path to default when path is empty or invalid
- Add 'reset to default path' buttons for skip files and reports
- Remove misleading 'total available' system paging counter
- Increase right column display width
- Log local file name used as background
- Update AlgernonCommons


Version 1.1.5 -

- Add classic background image mode
- Change memory use display from total page to additional allocated page


Version 1.1.4 -

- Support game version 1.16.1 and associated DLC
- Add additional null checks to API


Version 1.1.3

- Asset report filename is no longer localized (to facilitate automatic bundling of logs via Compatibility Report)
- Missing networks are now displayed in red on loading screen scroll


Version 1.1.2 -

- Fix simulation recovery options not reverting after use
- Update options panel layout to make missing net recovery more explicit


Version 1.1.1 -

- Fix NullReferenceException when toggling background image options due to missing random imgur option
- Add more curated background images


Version 1.1 -

- Support game version 1.16
- Implement network skipping
- Implement tree skipping
- Automatically create any missing skipfile directories and files when opening a specified skip file via the options panel
- Temporarily disable random imgur image option (due to imgur site changes blocking this from working)


Version 1.0 -

- Support game version 1.15.1


Version 0.8.1.1 -

- Add null check to GetLoadQueue


Version 0.8.1 -

- Add check for subsidary road elevations if 'load used' is in effect and the primary road elevation isn't in use


Verion 0.8.0.1 hotfix -
